--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion 30
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
@@ -12,9 +12,9 @@ android {
     defaultConfig {
         applicationId "com.wa2c.android.medoly.library"
         minSdkVersion 16
-        targetSdkVersion 28
+        targetSdkVersion 30
         versionCode 1
-        versionName "1.0.0"
+        versionName "${versionName}"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         applicationId "com.wa2c.android.medoly.library"
     }
